tests/ui/feature-gates/feature-gate-adt_const_params.stderr
error: `&'static str` is forbidden as the type of a const generic parameter
  --> $DIR/feature-gate-adt_const_params.rs:1:24
   |
LL | struct Foo<const NAME: &'static str>;
   |                        ^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types

error: aborting due to previous error

